# antropomorphic_arm

./: .gitignore  CMakeLists.txt  package.xml
launch/: start_elipsoidal_motion.launch
src/antropomorphic_project/: antropomorphic_end_effector_mover.py  ellipsoidal_motion.py  fk_antropomorphic_arm.py  generate_matrixes.py  ik_antropomorphic_arm.py  move_joints.py  rviz_marker.py
